--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -45,7 +46,7 @@ body * {
 #profile {
   text-align: center;
   padding: 24px;
-  margin-top: 8px;
+  
 }
 
 #profile img {
