--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
 body {
   /*atalho*/
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -46,7 +47,6 @@ body * {
 #profile {
   text-align: center;
   padding: 24px;
-  
 }
 
 #profile img {
@@ -78,7 +78,7 @@ body * {
   top: 50%;
   right: 0;
   z-index: 1;
-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .light #switch button {
@@ -115,17 +115,17 @@ ul li a {
   background: var(--surface-color);
   border: 1px solid var(--stroke-color);
   border-radius: 8px;
-  
+
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
 
   text-decoration: none;
   font-weight: 500;
 
-  transition: background .2s;
+  transition: background 0.2s;
 }
 
-ul li a:hover { 
+ul li a:hover {
   background: var(--surface-color-hover);
   border: 1.5px solid white;
 }
@@ -134,7 +134,7 @@ ul li a:hover {
 #social-links {
   display: flex;
   justify-content: center;
-  
+
   padding: 24px 0;
   font-size: 40px;
 }
@@ -157,4 +157,15 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/* Media */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.png);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.png);
+  }
 }
